--- a/argo-api-gateway-project/gateway/gateway.yaml
+++ b/argo-api-gateway-project/gateway/gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: web-gateway
+  name: web-gateway-1
   namespace: dev-test
 spec:
   gatewayClassName: nginx
@@ -9,4 +9,6 @@ spec:
   - name: http
     protocol: HTTP
     port: 80
-
+    allowedRoutes:
+      namespaces:
+        from: Same
