--- a/argo-api-gateway-project/gateway/httproute.yaml
+++ b/argo-api-gateway-project/gateway/httproute.yaml
@@ -1,25 +1,35 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
-  name: web-route
+  name: web-route-1
   namespace: dev-test
 spec:
   parentRefs:
-  - name: web-gateway
+  - name: web-gateway-1
   rules:
   - matches:
     - path:
         type: PathPrefix
         value: /app1
+    filters:
+    - type: URLRewrite
+      urlRewrite:
+        path:
+          type: ReplacePrefixMatch
+          replacePrefixMatch: /
     backendRefs:
     - name: app1-svc
       port: 80
-
   - matches:
     - path:
         type: PathPrefix
         value: /app2
+    filters:
+    - type: URLRewrite
+      urlRewrite:
+        path:
+          type: ReplacePrefixMatch
+          replacePrefixMatch: /
     backendRefs:
     - name: app2-svc
       port: 80
-
